overlays/mgmt/istio-system/manifests/ingress.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kiali-gateway
spec:
  selector:
    istio: gateway
  servers:
    - hosts:
        - kiali.mgmt.hosterei.ch
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: kiali.mgmt.hosterei.ch-tls
    - hosts:
        - kiali.mgmt.hosterei.ch
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-virtual-service
spec:
  hosts:
  - kiali.mgmt.hosterei.ch
  gateways:
  - kiali-gateway
  http:
  - route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
